Colocando DTOS como record do Java 16